# photo-analyzer

./: .gitignore  README.md  RESTART_REQUIREMENTS.md  local_gallery.html  pyproject.toml
PhotoAnalyzerApp/: Package.swift  build_app.sh
PhotoAnalyzerApp/Sources/: AnalyzerService.swift  AppState.swift  ContentView.swift  FlowLayout.swift  GalleryFixedLayout.swift  LightTheme.swift  MasonryLayout.swift  Models.swift  PhotoAnalyzerApp.swift
docs/: README.md
docs/release-notes/v1.1.0-ui-model-update/: CHANGES.md
docs/release-notes/v1.2.0-git-large/: CHANGES.md
models/hf/: README.md
photo_analyzer/: __init__.py  captioning.py  cli.py  core.py  desktop_app.py  taxonomy.json
release_notes/v1.1.0-ui-model-update/: CHANGES.md
scripts/: expand_taxonomy_to_200.py  run_eval_five_rounds_random.py  vend_hf_models.py
technical_notes/: ARCHITECTURE.md  EVAL_MULTI_ROUND_GIT_LARGE.md  ISSUES.md  MODELS.md  README.md
tests/: test_core.py
